@@ -19,6 +19,11 @@ public class SteerForTether : Steering
 	
 	
 	#region Public properties
+	public override bool IsPostProcess 
+	{
+		get { return true; }
+	}
+
 	public float MaximumDistance {
 		get {
 			return this._maximumDistance;
@@ -48,7 +53,7 @@ public class SteerForTether : Steering
 		var distance = difference.magnitude;
 		if (distance > _maximumDistance)
 		{
-			steering = difference - Vehicle.Velocity;
+			steering = (difference + Vehicle.DesiredVelocity) / 2;
 		}
 		return steering;
 	}
