@@ -7,6 +7,8 @@ v.2.8 (WIP)
 - Added namespaces to the behaviors.  Decided against adding indentation to minimize the number of lines changed in case someone's doing a diff and forgets to exclude whitespace differences.
 - Removed SteeringEvent. The class was unnecessary, we can just do everything with standard actions.
 - New property Steering.ShouldRetryForce, so that behaviors handling the OnArrival even can indicate to the steering if they should retry the force calculation before giving up (in case any parameters changed).  The previous implementation was somewhat hacky.
+- SteerForTether is now a post-processing behavior. It now will also average between the impulse pulling it back and the desired velocity - I like that behavior better.
+
 
 v2.7
 ----
